[package]
name = "parallel-viewshed-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.2.3"
log = "0.4.17"
simplelog = "^0.12.0"
chrono = "0.4.23"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "mesh_splitter_bench"
harness = false
